--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "9.5.3",
+    "next-images": "^1.5.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "16.13.1",
