--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "normalize.css": "^8.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-image-lightbox": "^5.1.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "simple-react-lightbox": "^3.3.4-1"
   }
 }
