--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "firebase": "^7.21.1",
     "firebase-tools": "^8.11.2",
+    "globby": "^11.0.1",
     "logrocket": "^1.0.14",
     "next": "9.5.3",
     "next-images": "^1.5.0",
     "next-redux-wrapper": "^6.0.2",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
+    "prettier": "^2.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-image-lightbox": "^5.1.1",
