--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "next": "9.5.3",
     "next-images": "^1.5.0",
     "next-redux-wrapper": "^6.0.2",
-    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "prettier": "^2.1.2",
     "react": "16.13.1",
@@ -24,6 +23,7 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "sass": "^1.32.8",
     "simple-react-lightbox": "^3.3.4-1"
   }
 }
